<resources>
    <string name="app_name">ExerciseExchange</string>

<!--    Schermata di login-->
    <string name="strUsername">Username</string>
    <string name="strPassword">Password</string>
    <string name="strLogin">Login</string>
    <string name="strRemeberMe">Ricordami</string>
    <string name="strLoginButton">Accedi</string>
    <string name="strRegister">Se non hai ancora un account</string>
    <string name="strRegisterButton">Registrati</string>

<!--    Schermata di registrazione-->
    <string name="strConfirmPassword">Conferma password</string>
    <string name="strRegistrazione">Registrazione</string>
    <string name="title_activity_registrazione">Registrazione</string>
    <string name="insertUsername">Inserire lo username</string>
    <string name="insertPassword">Inserire la password</string>
    <string name="insertConfirmPassword">Confermare la password</string>
    <string name="differentPasswordInputs">Le password inserite non coincidono</string>

<!--    Homepage-->
    <string name="strLogout">Logout</string>
    <string name="strHome">Home</string>
    <string name="strExerciseResearch">Ricerca esercizi</string>
    <string name="strInsertExercise">Inserimento esercizi</string>
    <string name="strExerciseStats">Statistiche esercizi</string>

<!--    Ricerca esercizi-->
    <string name="modalitàRicerca">Modalità di ricerca</string>
    <string name="eserciziTrovati">Esercizi trovati</string>
    <string name="slideshow">Slideshow</string>
    <string name="votaEsercizio">Vota l\'esercizio</string>

    <string name="strVisualizzazioneFoto">Visualizzazione foto</string>

    <string name="selezioneModalità">Selezionare la modalità</string>
    <string name="strSingleCategory">Singola \ncategoria</string>
    <string name="strutturaEsame">Struttura d\'esame</string>
    <string name="inserimentoMateria">Inserisci la materia</string>
    <string name="inserimentoStruttura">Inserisci la struttura</string>
    <string name="strExamStructure">Struttura \nesame</string>
    <string name="strSubject">Materia</string>
    <string name="strCategory">Categoria</string>
    <string name="strSearch">Cerca</string>
    <string name="strValutazione">Valutazione</string>

    <!-- Stringhe del cronometro -->
    <string name="avvia">Avvia</string>
    <string name="ferma">Ferma</string>
    <string name="txtCentesimi">:00</string>
    <string name="timer">Timer</string>
    <string name="azzera">Azzera</string>
    <string name="prosegui">Prosegui</string>
    <string name="btnMeno">-</string>
    <string name="btnPiu">+</string>
    <string name="utilizzareTimer">Utilizzare il timer</string>
    <string name="numeroTentativi">Numero di tentativi</string>

    <!--Stringhe dell'inserimento-->
    <string name="titoloInserimento">Inserimento esercizi</string>
    <string name="tempiETentativi">Tempi e tentativi</string>
    <string name="informazioniEsercizio">Informazioni esercizio</string>

    <string name="codice_esercizio">Codice esercizio</string>
    <string name="categoria">Categoria</string>
    <string name="capitolo">Capitolo</string>
    <string name="libro">Libro</string>
    <string name="conferma">Conferma</string>
    <string name="erroreMateriaVuota">Indicare una materia</string>
    <string name="erroreCodiceEsercizioVuoto">Indicare un codice esercizio</string>
    <string name="erroreCapitoloVuoto">Indicare un capitolo</string>
    <string name="erroreCategoriaVuota">Indicare una categoria</string>
    <string name="erroreLibroVuoto">Indicare un libro</string>
    <string name="title_activity_giancarlo">GiancarloActivity</string>

    <string name="baseURL">http://teamt5.altervista.org/Exercise_Exchange/</string>
    <string name="hostDir">/Exercise_Exchange/</string>

    <string name="inserimentoEffettuato">Inserimento effettuato</string>
    <string name="inserimentoFallito">Errore di inserimento</string>

    <string name="atFound">I campi non possono contenere la chiocciola</string>

    <string name="hostname">ftp.teamt5.altervista.org</string>
    <string name="usernameFTP">gabriele@teamt5</string>
    <string name="passwordFTP">password</string>

    <!--Activity singola categoria -->
    <string name="strEnter">Invia</string>
    <string name="subjectNotFound">Materia non trovata</string>
    <string name="categoryNotFound">Categoria non trovata per questa materia</string>
    <string name="eserciziEmptyList">La ricerca non ha prodotto risultati</string>

    <!-- Activity valutazione -->
    <string name="examDuration">Durata esame: </string>
    <string name="estimatedCompletionTime">Tempo stimato: </string>
    <string name="empty">Vuoto</string>

    <string name="strVerdettoPessimo">Pessimo</string>
    <string name="strVerdettoDiscreto">Discreto</string>
    <string name="strVerdettoBuono">Buono</string>
    <string name="strVerdettoOttimo">Ottimo</string>
    <string name="strVerdettoErrore">!Errore!</string>

    <string name="strDidascaliaPessimo">Hai scarse possibilità di superare l\'esame</string>
    <string name="strDidascaliaDiscreto">Hai discrete possibilità di superare l\'esame</string>
    <string name="strDidascaliaBuono">Hai buone possibilità di superare l\'esame</string>
    <string name="strDidascaliaOttimo">Hai ottime possibilità di superare l\'esame</string>
    <string name="strDidascaliaErrore">Si è verificato un problema nel prelievo dei dati</string>

    <!-- Ricerca esercizi -->
    <string name="ricercaDettagliata">Ricerca dettagliata</string>
    <string name="ricercaGenerica">Ricerca generica</string>

    <string name="strLibro">Libro</string>
    <string name="strCapitolo">Capitolo</string>
    <string name="strNumero">Numero</string>
    <string name="strRicerca">Ricerca</string>
    <string name="strCategoria">Categoria</string>

    <string name="bookNotFound">Libro non trovato per questa materia</string>

    <!-- Visualizzazione esercizi -->
    <string name="strCaricatoDa">Caricato da:</string>
    <string name="strVotoMedio">Voto medio:</string>
    <string name="strID">ID:</string>

    <!-- Graph activity -->
    <string name="titoloGraficoTempi">Tempo impiegato (minuti)</string>
    <string name="titoloGraficotentativi">Tentativi effettuati</string>
    <string name="sottotitoloGraphActivity">Dati degli ultimi 5 esercizi svolti</string>

    <!-- Vota esercizio -->
    <string name="voto">Voto</string>
    <string name="votoConfermato">Voto inserito correttamente</string>
    <string name="votoNegato">Errore di inserimento del voto</string>

    <!-- Struttura esame -->
    <string name="durataEsame">Durata esame</string>
    <string name="consiglioInserimento">hh:mm</string>
    <string name="aggiungiSezione">Aggiungi sezione</string>
    <string name="aggiungiCategoria">Aggiungi categoria</string>
    <string name="erroreSezioneVuota">Aggiungere una categoria alla sezione</string>
    <string name="erroreListaSezioniVuota">Aggiungere almeno una sezione</string>
    <string name="strBaseSezione">Sezione</string>
    <string name="strCategorie">Categorie:</string>
    <string name="inserireDurataEsame">Inserire la durata d\'esame</string>

</resources>